# Fangreport

./: .gitignore  LICENSE  README.md  fangreport.py  fangreport_gui.py  pyproject.toml  requirements.txt  wetterdaten.py
clients/: __init__.py  aipo_auth.example.json  aipo_client.py  italian_stations.json
fangreport/: client.py  gui.py
fangreport/core/: __init__.py  report.py
fangreport/data/: italian_stations.json
fangreport/data_loading/: aipo_client.py  water_level.py
tests/: test_report_generation.py  test_water_level_cleaning.py
